# ML-POC

./: README.md  pyproject.toml
src/ml_poc/: __init__.py  data.py  evaluate.py  main.py  model.py
